compiler/Grammar/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> instruction
Rule 4     instruction -> printST SEMICOLON
Rule 5     instruction -> ifST SEMICOLON
Rule 6     instruction -> declarationST SEMICOLON
Rule 7     instruction -> whileST SEMICOLON
Rule 8     instruction -> callFunc SEMICOLON
Rule 9     instruction -> declareFunc SEMICOLON
Rule 10    instruction -> returnST SEMICOLON
Rule 11    instruction -> breakST SEMICOLON
Rule 12    instruction -> continueST SEMICOLON
Rule 13    instruction -> createStruct SEMICOLON
Rule 14    instruction -> declareStructST SEMICOLON
Rule 15    instruction -> assignAccessST SEMICOLON
Rule 16    statement -> instructions
Rule 17    declareFunc -> FUNCTION ID LEPAR RIPAR statement END
Rule 18    declareFunc -> FUNCTION ID LEPAR decParams RIPAR statement END
Rule 19    decParams -> decParams COMMA ID
Rule 20    decParams -> ID
Rule 21    returnST -> RETURN
Rule 22    returnST -> RETURN expression
Rule 23    declarationST -> ID EQUALS expression
Rule 24    printST -> PRINTLN LEPAR expression RIPAR
Rule 25    printST -> PRINT LEPAR expression RIPAR
Rule 26    ifST -> IF expression statement END
Rule 27    ifST -> IF expression statement ELSE statement END
Rule 28    ifST -> IF expression statement elseIfList END
Rule 29    elseIfList -> ELSEIF expression statement
Rule 30    elseIfList -> ELSEIF expression statement ELSE statement
Rule 31    elseIfList -> ELSEIF expression statement elseIfList
Rule 32    createStruct -> STRUCT ID attList END
Rule 33    attList -> attList SEMICOLON ID SEMICOLON
Rule 34    attList -> ID
Rule 35    declareStructST -> ID COLON COLON ID
Rule 36    assignAccessST -> ID POINT ID EQUALS expression
Rule 37    whileST -> WHILE expression statement END
Rule 38    breakST -> BREAK
Rule 39    continueST -> CONTINUE
Rule 40    callFunc -> ID LEPAR RIPAR
Rule 41    callFunc -> ID LEPAR expList RIPAR
Rule 42    expList -> expList COMMA expression
Rule 43    expList -> expression
Rule 44    expression -> MINUS expression
Rule 45    expression -> NOT expression
Rule 46    expression -> expression PLUS expression
Rule 47    expression -> expression MINUS expression
Rule 48    expression -> expression TIMES expression
Rule 49    expression -> expression DIV expression
Rule 50    expression -> expression GREATER expression
Rule 51    expression -> expression LESS expression
Rule 52    expression -> expression GREATEREQUAL expression
Rule 53    expression -> expression LESSEQUAL expression
Rule 54    expression -> expression EQUALSEQUALS expression
Rule 55    expression -> expression DISTINT expression
Rule 56    expression -> expression OR expression
Rule 57    expression -> expression AND expression
Rule 58    expression -> finalExp
Rule 59    finalExp -> LEPAR expression RIPAR
Rule 60    finalExp -> INTLITERAL
Rule 61    finalExp -> FLOATLITERAL
Rule 62    finalExp -> STRINGLITERAL
Rule 63    finalExp -> TRUE
Rule 64    finalExp -> FALSE
Rule 65    finalExp -> ID
Rule 66    finalExp -> callFunc
Rule 67    finalExp -> accessST
Rule 68    accessST -> ID POINT ID

Terminals, with rules where they appear

AND                  : 57
BREAK                : 38
COLON                : 35 35
COMMA                : 19 42
CONTINUE             : 39
DISTINT              : 55
DIV                  : 49
ELSE                 : 27 30
ELSEIF               : 29 30 31
END                  : 17 18 26 27 28 32 37
EQUALS               : 23 36
EQUALSEQUALS         : 54
FALSE                : 64
FLOATLITERAL         : 61
FUNCTION             : 17 18
GREATER              : 50
GREATEREQUAL         : 52
ID                   : 17 18 19 20 23 32 33 34 35 35 36 36 40 41 65 68 68
IF                   : 26 27 28
INTLITERAL           : 60
LEPAR                : 17 18 24 25 40 41 59
LESS                 : 51
LESSEQUAL            : 53
MINUS                : 44 47
NOT                  : 45
OR                   : 56
PLUS                 : 46
POINT                : 36 68
PRINT                : 25
PRINTLN              : 24
RETURN               : 21 22
RIPAR                : 17 18 24 25 40 41 59
SEMICOLON            : 4 5 6 7 8 9 10 11 12 13 14 15 33 33
STRINGLITERAL        : 62
STRUCT               : 32
TIMES                : 48
TRUE                 : 63
WHILE                : 37
error                : 

Nonterminals, with rules where they appear

accessST             : 67
assignAccessST       : 15
attList              : 32 33
breakST              : 11
callFunc             : 8 66
continueST           : 12
createStruct         : 13
decParams            : 18 19
declarationST        : 6
declareFunc          : 9
declareStructST      : 14
elseIfList           : 28 31
expList              : 41 42
expression           : 22 23 24 25 26 27 28 29 30 31 36 37 42 43 44 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 59
finalExp             : 58
ifST                 : 5
instruction          : 2 3
instructions         : 1 2 16
printST              : 4
returnST             : 10
start                : 0
statement            : 17 18 26 27 27 28 29 30 30 31 37
whileST              : 7

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . printST SEMICOLON
    (5) instruction -> . ifST SEMICOLON
    (6) instruction -> . declarationST SEMICOLON
    (7) instruction -> . whileST SEMICOLON
    (8) instruction -> . callFunc SEMICOLON
    (9) instruction -> . declareFunc SEMICOLON
    (10) instruction -> . returnST SEMICOLON
    (11) instruction -> . breakST SEMICOLON
    (12) instruction -> . continueST SEMICOLON
    (13) instruction -> . createStruct SEMICOLON
    (14) instruction -> . declareStructST SEMICOLON
    (15) instruction -> . assignAccessST SEMICOLON
    (24) printST -> . PRINTLN LEPAR expression RIPAR
    (25) printST -> . PRINT LEPAR expression RIPAR
    (26) ifST -> . IF expression statement END
    (27) ifST -> . IF expression statement ELSE statement END
    (28) ifST -> . IF expression statement elseIfList END
    (23) declarationST -> . ID EQUALS expression
    (37) whileST -> . WHILE expression statement END
    (40) callFunc -> . ID LEPAR RIPAR
    (41) callFunc -> . ID LEPAR expList RIPAR
    (17) declareFunc -> . FUNCTION ID LEPAR RIPAR statement END
    (18) declareFunc -> . FUNCTION ID LEPAR decParams RIPAR statement END
    (21) returnST -> . RETURN
    (22) returnST -> . RETURN expression
    (38) breakST -> . BREAK
    (39) continueST -> . CONTINUE
    (32) createStruct -> . STRUCT ID attList END
    (35) declareStructST -> . ID COLON COLON ID
    (36) assignAccessST -> . ID POINT ID EQUALS expression

    PRINTLN         shift and go to state 16
    PRINT           shift and go to state 17
    IF              shift and go to state 18
    ID              shift and go to state 19
    WHILE           shift and go to state 20
    FUNCTION        shift and go to state 21
    RETURN          shift and go to state 22
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    STRUCT          shift and go to state 25

    start                          shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    printST                        shift and go to state 4
    ifST                           shift and go to state 5
    declarationST                  shift and go to state 6
    whileST                        shift and go to state 7
    callFunc                       shift and go to state 8
    declareFunc                    shift and go to state 9
    returnST                       shift and go to state 10
    breakST                        shift and go to state 11
    continueST                     shift and go to state 12
    createStruct                   shift and go to state 13
    declareStructST                shift and go to state 14
    assignAccessST                 shift and go to state 15

state 1

    (0) S' -> start .



state 2

    (1) start -> instructions .
    (2) instructions -> instructions . instruction
    (4) instruction -> . printST SEMICOLON
    (5) instruction -> . ifST SEMICOLON
    (6) instruction -> . declarationST SEMICOLON
    (7) instruction -> . whileST SEMICOLON
    (8) instruction -> . callFunc SEMICOLON
    (9) instruction -> . declareFunc SEMICOLON
    (10) instruction -> . returnST SEMICOLON
    (11) instruction -> . breakST SEMICOLON
    (12) instruction -> . continueST SEMICOLON
    (13) instruction -> . createStruct SEMICOLON
    (14) instruction -> . declareStructST SEMICOLON
    (15) instruction -> . assignAccessST SEMICOLON
    (24) printST -> . PRINTLN LEPAR expression RIPAR
    (25) printST -> . PRINT LEPAR expression RIPAR
    (26) ifST -> . IF expression statement END
    (27) ifST -> . IF expression statement ELSE statement END
    (28) ifST -> . IF expression statement elseIfList END
    (23) declarationST -> . ID EQUALS expression
    (37) whileST -> . WHILE expression statement END
    (40) callFunc -> . ID LEPAR RIPAR
    (41) callFunc -> . ID LEPAR expList RIPAR
    (17) declareFunc -> . FUNCTION ID LEPAR RIPAR statement END
    (18) declareFunc -> . FUNCTION ID LEPAR decParams RIPAR statement END
    (21) returnST -> . RETURN
    (22) returnST -> . RETURN expression
    (38) breakST -> . BREAK
    (39) continueST -> . CONTINUE
    (32) createStruct -> . STRUCT ID attList END
    (35) declareStructST -> . ID COLON COLON ID
    (36) assignAccessST -> . ID POINT ID EQUALS expression

    $end            reduce using rule 1 (start -> instructions .)
    PRINTLN         shift and go to state 16
    PRINT           shift and go to state 17
    IF              shift and go to state 18
    ID              shift and go to state 19
    WHILE           shift and go to state 20
    FUNCTION        shift and go to state 21
    RETURN          shift and go to state 22
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    STRUCT          shift and go to state 25

    instruction                    shift and go to state 26
    printST                        shift and go to state 4
    ifST                           shift and go to state 5
    declarationST                  shift and go to state 6
    whileST                        shift and go to state 7
    callFunc                       shift and go to state 8
    declareFunc                    shift and go to state 9
    returnST                       shift and go to state 10
    breakST                        shift and go to state 11
    continueST                     shift and go to state 12
    createStruct                   shift and go to state 13
    declareStructST                shift and go to state 14
    assignAccessST                 shift and go to state 15

state 3

    (3) instructions -> instruction .

    PRINTLN         reduce using rule 3 (instructions -> instruction .)
    PRINT           reduce using rule 3 (instructions -> instruction .)
    IF              reduce using rule 3 (instructions -> instruction .)
    ID              reduce using rule 3 (instructions -> instruction .)
    WHILE           reduce using rule 3 (instructions -> instruction .)
    FUNCTION        reduce using rule 3 (instructions -> instruction .)
    RETURN          reduce using rule 3 (instructions -> instruction .)
    BREAK           reduce using rule 3 (instructions -> instruction .)
    CONTINUE        reduce using rule 3 (instructions -> instruction .)
    STRUCT          reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    END             reduce using rule 3 (instructions -> instruction .)
    ELSE            reduce using rule 3 (instructions -> instruction .)
    ELSEIF          reduce using rule 3 (instructions -> instruction .)


state 4

    (4) instruction -> printST . SEMICOLON

    SEMICOLON       shift and go to state 27


state 5

    (5) instruction -> ifST . SEMICOLON

    SEMICOLON       shift and go to state 28


state 6

    (6) instruction -> declarationST . SEMICOLON

    SEMICOLON       shift and go to state 29


state 7

    (7) instruction -> whileST . SEMICOLON

    SEMICOLON       shift and go to state 30


state 8

    (8) instruction -> callFunc . SEMICOLON

    SEMICOLON       shift and go to state 31


state 9

    (9) instruction -> declareFunc . SEMICOLON

    SEMICOLON       shift and go to state 32


state 10

    (10) instruction -> returnST . SEMICOLON

    SEMICOLON       shift and go to state 33


state 11

    (11) instruction -> breakST . SEMICOLON

    SEMICOLON       shift and go to state 34


state 12

    (12) instruction -> continueST . SEMICOLON

    SEMICOLON       shift and go to state 35


state 13

    (13) instruction -> createStruct . SEMICOLON

    SEMICOLON       shift and go to state 36


state 14

    (14) instruction -> declareStructST . SEMICOLON

    SEMICOLON       shift and go to state 37


state 15

    (15) instruction -> assignAccessST . SEMICOLON

    SEMICOLON       shift and go to state 38


state 16

    (24) printST -> PRINTLN . LEPAR expression RIPAR

    LEPAR           shift and go to state 39


state 17

    (25) printST -> PRINT . LEPAR expression RIPAR

    LEPAR           shift and go to state 40


state 18

    (26) ifST -> IF . expression statement END
    (27) ifST -> IF . expression statement ELSE statement END
    (28) ifST -> IF . expression statement elseIfList END
    (44) expression -> . MINUS expression
    (45) expression -> . NOT expression
    (46) expression -> . expression PLUS expression
    (47) expression -> . expression MINUS expression
    (48) expression -> . expression TIMES expression
    (49) expression -> . expression DIV expression
    (50) expression -> . expression GREATER expression
    (51) expression -> . expression LESS expression
    (52) expression -> . expression GREATEREQUAL expression
    (53) expression -> . expression LESSEQUAL expression
    (54) expression -> . expression EQUALSEQUALS expression
    (55) expression -> . expression DISTINT expression
    (56) expression -> . expression OR expression
    (57) expression -> . expression AND expression
    (58) expression -> . finalExp
    (59) finalExp -> . LEPAR expression RIPAR
    (60) finalExp -> . INTLITERAL
    (61) finalExp -> . FLOATLITERAL
    (62) finalExp -> . STRINGLITERAL
    (63) finalExp -> . TRUE
    (64) finalExp -> . FALSE
    (65) finalExp -> . ID
    (66) finalExp -> . callFunc
    (67) finalExp -> . accessST
    (40) callFunc -> . ID LEPAR RIPAR
    (41) callFunc -> . ID LEPAR expList RIPAR
    (68) accessST -> . ID POINT ID

    MINUS           shift and go to state 42
    NOT             shift and go to state 43
    LEPAR           shift and go to state 45
    INTLITERAL      shift and go to state 46
    FLOATLITERAL    shift and go to state 47
    STRINGLITERAL   shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    ID              shift and go to state 51

    expression                     shift and go to state 41
    finalExp                       shift and go to state 44
    callFunc                       shift and go to state 52
    accessST                       shift and go to state 53

state 19

    (23) declarationST -> ID . EQUALS expression
    (40) callFunc -> ID . LEPAR RIPAR
    (41) callFunc -> ID . LEPAR expList RIPAR
    (35) declareStructST -> ID . COLON COLON ID
    (36) assignAccessST -> ID . POINT ID EQUALS expression

    EQUALS          shift and go to state 54
    LEPAR           shift and go to state 55
    COLON           shift and go to state 56
    POINT           shift and go to state 57


state 20

    (37) whileST -> WHILE . expression statement END
    (44) expression -> . MINUS expression
    (45) expression -> . NOT expression
    (46) expression -> . expression PLUS expression
    (47) expression -> . expression MINUS expression
    (48) expression -> . expression TIMES expression
    (49) expression -> . expression DIV expression
    (50) expression -> . expression GREATER expression
    (51) expression -> . expression LESS expression
    (52) expression -> . expression GREATEREQUAL expression
    (53) expression -> . expression LESSEQUAL expression
    (54) expression -> . expression EQUALSEQUALS expression
    (55) expression -> . expression DISTINT expression
    (56) expression -> . expression OR expression
    (57) expression -> . expression AND expression
    (58) expression -> . finalExp
    (59) finalExp -> . LEPAR expression RIPAR
    (60) finalExp -> . INTLITERAL
    (61) finalExp -> . FLOATLITERAL
    (62) finalExp -> . STRINGLITERAL
    (63) finalExp -> . TRUE
    (64) finalExp -> . FALSE
    (65) finalExp -> . ID
    (66) finalExp -> . callFunc
    (67) finalExp -> . accessST
    (40) callFunc -> . ID LEPAR RIPAR
    (41) callFunc -> . ID LEPAR expList RIPAR
    (68) accessST -> . ID POINT ID

    MINUS           shift and go to state 42
    NOT             shift and go to state 43
    LEPAR           shift and go to state 45
    INTLITERAL      shift and go to state 46
    FLOATLITERAL    shift and go to state 47
    STRINGLITERAL   shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    ID              shift and go to state 51

    expression                     shift and go to state 58
    finalExp                       shift and go to state 44
    callFunc                       shift and go to state 52
    accessST                       shift and go to state 53

state 21

    (17) declareFunc -> FUNCTION . ID LEPAR RIPAR statement END
    (18) declareFunc -> FUNCTION . ID LEPAR decParams RIPAR statement END

    ID              shift and go to state 59


state 22

    (21) returnST -> RETURN .
    (22) returnST -> RETURN . expression
    (44) expression -> . MINUS expression
    (45) expression -> . NOT expression
    (46) expression -> . expression PLUS expression
    (47) expression -> . expression MINUS expression
    (48) expression -> . expression TIMES expression
    (49) expression -> . expression DIV expression
    (50) expression -> . expression GREATER expression
    (51) expression -> . expression LESS expression
    (52) expression -> . expression GREATEREQUAL expression
    (53) expression -> . expression LESSEQUAL expression
    (54) expression -> . expression EQUALSEQUALS expression
    (55) expression -> . expression DISTINT expression
    (56) expression -> . expression OR expression
    (57) expression -> . expression AND expression
    (58) expression -> . finalExp
    (59) finalExp -> . LEPAR expression RIPAR
    (60) finalExp -> . INTLITERAL
    (61) finalExp -> . FLOATLITERAL
    (62) finalExp -> . STRINGLITERAL
    (63) finalExp -> . TRUE
    (64) finalExp -> . FALSE
    (65) finalExp -> . ID
    (66) finalExp -> . callFunc
    (67) finalExp -> . accessST
    (40) callFunc -> . ID LEPAR RIPAR
    (41) callFunc -> . ID LEPAR expList RIPAR
    (68) accessST -> . ID POINT ID

    SEMICOLON       reduce using rule 21 (returnST -> RETURN .)
    MINUS           shift and go to state 42
    NOT             shift and go to state 43
    LEPAR           shift and go to state 45
    INTLITERAL      shift and go to state 46
    FLOATLITERAL    shift and go to state 47
    STRINGLITERAL   shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    ID              shift and go to state 51

    expression                     shift and go to state 60
    finalExp                       shift and go to state 44
    callFunc                       shift and go to state 52
    accessST                       shift and go to state 53

state 23

    (38) breakST -> BREAK .

    SEMICOLON       reduce using rule 38 (breakST -> BREAK .)


state 24

    (39) continueST -> CONTINUE .

    SEMICOLON       reduce using rule 39 (continueST -> CONTINUE .)


state 25

    (32) createStruct -> STRUCT . ID attList END

    ID              shift and go to state 61


state 26

    (2) instructions -> instructions instruction .
